--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Configuration files
+*.ini
+
 # Mono auto generated files
 mono_crash.*
 
