--- a/libs/glad/CMakeLists.txt
+++ b/libs/glad/CMakeLists.txt
@@ -1,2 +1,13 @@
-add_library(glad STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/glad.c)
-target_include_directories(glad PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+include(FetchContent)
+
+FetchContent_Declare(
+  glad
+  GIT_REPOSITORY https://github.com/BaoBaB1/GladGeneratedSources.git
+  GIT_SHALLOW TRUE
+  GIT_TAG main
+)
+
+FetchContent_MakeAvailable(glad)
+
+add_library(glad STATIC ${glad_SOURCE_DIR}/glad46_core/src/glad.c)
+target_include_directories(glad PUBLIC ${glad_SOURCE_DIR}/glad46_core/include)
